fix: connection of CSS files, name overflow

--- a/singolo1.css
+++ b/singolo1.css
@@ -70,10 +70,6 @@ img {
   height: auto;
 }
 
-svg path {
-  fill: inherit;
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
